--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>java</groupId>
-    <artifactId>astonTask</artifactId>
-    <version>1.0</version>
+    <artifactId>astonTask_2_2024</artifactId>
+    <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 
     <!-- plugin for correct launch of Rest API -->
