--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: "3"
 services:
   my-web-app-db:
-    image: mydatabase
+    image: postgres
     environment:
       - POSTGRES_PASSWORD=1234
       - POSTGRES_USER=postgres
