--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
 		http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          id="WebApp_ID" version="4.0">
-    <display-name>User CRUD Web Application</display-name>
+    <display-name>Student CRUD Web Application</display-name>
 
     <error-page>
         <exception-type>java.lang.Exception</exception-type>
