--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     environment:
       - POSTGRES_PASSWORD=1234
       - POSTGRES_USER=postgres
-      - POSTGRES_DB=mydatabase_02
+      - POSTGRES_DB=mydatabase
   my-web-app:
     build: .
     ports:
