--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,3 +1,4 @@
-db.jdbcURL=jdbc:postgresql://localhost:5438/mydatabase
+# db.properties 
+db.jdbcURL=jdbc:postgresql://localhost:5432/mydatabase
 db.jdbcUsername=postgres
 db.jdbcPassword=1234
