--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,14 +1,17 @@
-version: "3"
+version: '3.7'
+
 services:
-  my-web-app-db:
-    image: postgres
+  db:
+    image: postgres:latest
     environment:
-      - POSTGRES_PASSWORD=1234
-      - POSTGRES_USER=postgres
-      - POSTGRES_DB=mydatabase
-  my-web-app:
-    build: .
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: 1234
+      POSTGRES_DB: mydatabase
     ports:
-      - "5438:5432"
-    depends_on:
-      - my-web-app-db
+      - "5432:5432"
+    volumes:
+      - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
+
+volumes:
+  postgres_data:
