--- a/src/main/resources/db.properties
+++ b/src/main/resources/db.properties
@@ -1,4 +1,4 @@
 # db.properties 
 db.jdbcURL=jdbc:postgresql://localhost:5432/mydatabase
 db.jdbcUsername=postgres
-db.jdbcPassword=1234
+db.jdbcPassword=xxxx
